[package]
name = "wvr-video"
version = "0.1.0"
authors = ["gurke.club <contact@gurke.club>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
gstreamer = "0.15"
gstreamer-app = "0.15"
gstreamer-audio = "0.15"
gstreamer-video = "0.15"
image = "0.23"
wvr-data = {git = "https://github.com/gurkeclub/wvr-data.git", branch="main"}
wvr-io = {git = "https://github.com/gurkeclub/wvr-io.git", branch="main"}
